<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">萌码</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pager_sign">签到</string>
    <string name="pager_news">新闻</string>
    <string name="pager_know">萌懂</string>
    <string name="pager_setting">设置</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">萌    码</string>
    <string name="sno">学  号</string>
    <string name="password">密  码</string>
    <string name="voicesign">声波签到</string>
    <string name="setting_sign_voice">接收签到声波</string>
    <string name="setting_sign_qr">获取签到二维码</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_new_admin">成员管理</string>
    <string name="setting_new_sign">发起新的签到</string>
    <string name="sign_qr">二维码签到</string>
    <string name="setting_sign_nfc">NFC签到</string>
    <string name="title_activity_new_sign">NewSignActivity</string>
    <!-- activity new sign -->
    <string name="newsign_titlebar">新建签到</string>
    <string name="newsign_startat_label">起始时间:</string>
    <string name="newsign_endat_label">截止时间:</string>
    <string name="newsign_description">简单描述:</string>
    <string name="newsign_commit">提   交</string>
    <string name="setting_sign_list">我的签到表</string>
    <string name="title_activity_sign_list">SignListActivity</string>
    <string name="signlist_title">我发起的签到</string>
    <string name="login_btn_text">登  录</string>
    <string name="title_activity_sign_detail">SignDetail</string>
    <string name="link_register">用户注册</string>
    <string name="title_activity_nfc">NfcActivity</string>
    <string name="title_activity_user_manager">UserManagerActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_qrcode">QRcodeActivity</string>

</resources>
