<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical"
    tools:context="me.shyboy.mengma.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3e82f7"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="#FFF"
            android:layout_centerInParent="true"
            android:textSize="18dp"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop = "30dp"
        android:layout_marginBottom="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/icon"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:layout_gravity="center"
        >
        <EditText
            android:id="@+id/login_sno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sno"
            android:inputType="number"
            android:singleLine="true"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginBottom="20dp"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/login_btn_text"
            android:textColor="#fff"
            android:background="@drawable/login_btn"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/link_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp"
        android:text="@string/link_register"
        android:textSize="18dp"
        android:textColor="#7cb7ff"
        android:visibility="gone"
        />

</LinearLayout>
