<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/setting_new_sign"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_btn_bg"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:clickable="true"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/setting_new_sign_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_new_sign"
            android:textSize="18dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/setting_receive_voice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_btn_bg"
        android:paddingLeft="18dp"
        android:orientation="vertical"
        android:paddingRight="18dp"
        android:clickable="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#aaa"
            ></LinearLayout>

        <TextView
            android:id="@+id/setting_receive_voice_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_sign_voice"
            android:textSize="18dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/setting_get_qr"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_btn_bg"
        android:paddingLeft="18dp"
        android:orientation="vertical"
        android:paddingRight="18dp"
        android:clickable="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#aaa"
            ></LinearLayout>

        <TextView
            android:id="@+id/setting_get_qr_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_sign_qr"
            android:textSize="18dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/setting_new_admin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_btn_bg"
        android:paddingLeft="18dp"
        android:orientation="vertical"
        android:paddingRight="18dp"
        android:clickable="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#aaa"
            ></LinearLayout>

        <TextView
            android:id="@+id/setting_new_admin_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_new_admin"
            android:textSize="18dp"
            />
    </LinearLayout>

    <!--NFC-->
    <LinearLayout
        android:id="@+id/setting_sign_nfc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_btn_bg"
        android:paddingLeft="18dp"
        android:orientation="vertical"
        android:paddingRight="18dp"
        android:clickable="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#aaa"
            ></LinearLayout>

        <TextView
            android:id="@+id/setting_sign_nfc_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_sign_nfc"
            android:textSize="18dp"
            />
    </LinearLayout>
    <!--签到列表-->
    <LinearLayout
        android:id="@+id/setting_sign_list"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_btn_bg"
        android:paddingLeft="18dp"
        android:orientation="vertical"
        android:paddingRight="18dp"
        android:clickable="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#aaa"
            ></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_sign_list"
            android:textSize="18dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_logout"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_btn_bg"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:clickable="true"
        >
        <TextView
            android:id="@+id/setting_logout_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/setting_logout"
            android:textSize="18dp"

            />
    </LinearLayout>
</LinearLayout>
