<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#eee"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_blue_bg"
        >
        <ImageButton
            android:id="@+id/newsign_out"
            android:layout_width="13dp"
            android:layout_height="22dp"
            android:scaleType="centerCrop"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/arrow_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/newsign_titlebar"
            android:textColor="#fff"
            android:textSize="18dp"
            />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsign_startat_label"
                android:textSize="16dp"
                android:textStyle="bold"
                />
            <TimePicker
                android:id="@+id/newsign_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsign_endat_label"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <TimePicker
            android:id="@+id/newsign_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsign_description"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/newsign_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="8"
            />
             </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/newsign_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn"
            android:text="@string/newsign_commit"
            android:textColor="#fff"
            />
         </LinearLayout>
</LinearLayout>