<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    tools:context=".MainActivity">
    <android.support.v4.view.ViewPager
        android:id="@+id/main_pager"
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        />
    <!--底部Table-->
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#bbb"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            >
            <TextView
                android:id="@+id/tab_sign"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="18dp"
                android:clickable="true"
                android:textColor="#5a95f8"
                android:text="@string/pager_sign"
                />
            <TextView
                android:id="@+id/tab_news"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="18dp"
                android:clickable="true"
                android:textColor="#666"
                android:text="@string/pager_news"
                />
            <TextView
                android:id="@+id/tab_know"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:textSize="18dp"
                android:textColor="#666"
                android:text="@string/pager_know"
            />
            <TextView
                android:id="@+id/tab_setting"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:textSize="18dp"
                android:textColor="#666"
                android:text="@string/pager_setting"
                />
             </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/tab_line"
                    android:layout_width="wrap_content"
                    android:layout_height="8px"
                    android:scaleType="fitXY"
                    android:src = "@drawable/line_tab_main"
                    />
             </LinearLayout>
        </LinearLayout>
</RelativeLayout>
